--- a/distributed-crowdfunding/distributed-crowd-parent/distributed-crow-1-common/pom.xml
+++ b/distributed-crowdfunding/distributed-crowd-parent/distributed-crow-1-common/pom.xml
@@ -42,6 +42,10 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
 
